fixed stretched icons and spacing

--- a/index.css
+++ b/index.css
@@ -191,7 +191,7 @@ a {
 }
 
 header {
-    background-image: linear-gradient(to bottom, #fefaf5, #fbf1e7, #f8ece8, #fefaf5);
+    background-image: linear-gradient(to bottom, #fefaf5, #fbf1e7, #f8ece8, #fdfcf9);
 
 }
 
@@ -269,7 +269,7 @@ header {
 .wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding: 5% 0%;
+    padding: 12% 0% 4% 0%;
     background-color: #fdfcf9;
     color: #4F4F4F;
 }
@@ -786,7 +786,7 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 7% 2%;
+    padding: 2% 2% 6% 2%;
     background-image: linear-gradient(to bottom, #fefbfa, #fefcfb, #fefcfb);
 }
 
@@ -1227,7 +1227,7 @@ header {
     justify-content: space-between;
     background: #F0DCC5;
     place-items: center;
-    padding: 5%;
+    padding:5%;
     cursor: pointer;
 }
 
